# pacwallet

./: .gitignore  LICENSE  README.md  go.mod  go.sum
cmd/pacwallet/: main.go
cmd/pacwallet-desktop/: main.go  main_test.go
deploy/: pacwallet-mainnet.env.example
deploy/systemd/: pacwallet-mainnet.service
internal/address/: address.go  address_test.go  base58.go
internal/buildinfo/: buildinfo.go
internal/chaincfg/: params.go  params_test.go
internal/service/: service.go  service_test.go
internal/txscript/: p2pkh.go
internal/wallet/: amount.go  balance.go  encryption.go  rpc.go  txbuilder.go  txbuilder_test.go  wallet.go  wallet_test.go
internal/web/: server.go  server_test.go
internal/web/static/: style.css
internal/web/templates/: _partials.html  home.html  tx.html
internal/wire/: block.go  hash.go  tx.go
packaging/windows/: pacwallet-installer.iss
qt/: CMakeLists.txt  README.md
qt/resources/: pacwallet.qrc  pacwallet.rc.in  pingancoin.icns
qt/src/: ApiClient.cpp  ApiClient.h  Localization.cpp  Localization.h  MainWindow.cpp  MainWindow.h  Models.h  ServiceController.cpp  ServiceController.h  main.cpp
qt/src/pages/: MultisigPage.cpp  MultisigPage.h  OverviewPage.cpp  OverviewPage.h  ReceivePage.cpp  ReceivePage.h  SendPage.cpp  SendPage.h  SettingsPage.cpp  SettingsPage.h  TransactionsPage.cpp  TransactionsPage.h  WelcomePage.cpp  WelcomePage.h
scripts/: build-macos-qt-release.sh  build-windows-installer.sh  build-windows-qt-release.ps1  build-windows-release.sh  setup-windows-qt-toolchain.ps1  sign-windows-release.sh
